...

	return (
		<>
			{withTrigger && (
				<ModalTrigger
					{...{ onOpen, countryCode, ...trigger }}
					testID="country-picker-trigger"
				/>
			)}
			<CountryModal
				withModal={withTrigger}
				{...{ visible, ...modal }}
				onRequestClose={onClose}
...
