...
		>
			{withCloseButton && (
				<View>
					<GestureHandlerRootView>
						<StyledPressable
							onPress={onClose}
							testID="close-modal-button"
							className={wrapperClassName}
						>
							<StyledMaterialIcon
								name="close"
								size={18}
								className={iconClassName}
...
