appId: app.munctl.speakerpicker
---
- tapOn:
    id: "country-picker-trigger"
- assertVisible:
    id: "text-input-country-filter"
- tapOn:
    text: "Z"
- tapOn:
    id: "country-selector-ZM"
- assertVisible:
    text: "Zambia "
- assertNotVisible:
    id: "text-input-country-filter"


